# research-mcp-oss

./: .gitignore  README.md  SECURITY.md  process_pdf.py  process_tex.py  pyproject.toml  server.py
acquire/: acquire_batch.py  process_inbox.py  retraction_refresh.py
audit/: audit_text_match.py  fix_ligatures.py  redocling_cleared.py  redocling_specific.py
docs/: ARCHITECTURE.md  CLIENT_CONVENTIONS.md  CONTRIBUTING.md  DOWNLOAD_BACKENDS.md
examples/: claude_code_mcp.json
examples/launchd/: com.research-mcp.retraction-refresh.plist
maintenance/: audit_page_gaps.py  backfill_citations.py  backfill_embed_qwen3.py  backfill_embeddings.py  backfill_has_gapped_extraction.py  backfill_page_passages.py  build_jstor_db.py  build_reacquire_list.py  cleanup_orphans.py  dedup_papers.py  migrate_pdfs.py  rename_prep.py  repair_db.py  repair_db_v2.py  repair_has_full_text.py  strip_chunk_markers.py
page_offsets/: apply_manual_offsets.py  backfill_page_offsets.py  backfill_page_offsets_labels.py  backfill_page_offsets_ocr.py  backfill_page_offsets_pdf.py  backfill_page_offsets_pdf_pass2.py  export_manual_review.py  process_manual_review_offsets.py  reexport_manual_review_ocr.py
research_mcp/: __init__.py  paths.py
